Fix background size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ All colors MUST be HSL.
     height: 100%;
     background-image: url('/src/assets/texture-grid.png');
     background-attachment: fixed;
-    background-size: 400px 400px;
+    background-size: auto;
     background-position: center;
     background-repeat: repeat;
     opacity: 0.6;
